Dataset specific api spec (#167)
* Improve dataset-specific docs endpoint
* Remove required parameters, since now part of path
* Apply coding standards, refactor sendResponse function
* Increase unit test coverage
